--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="사용자"/>
+        android:text="사용자 모드"/>
 
     <Button
         android:id="@+id/bt_cctv__main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="CCTV"/>
+        android:text="CCTV 모드"/>
 
 </LinearLayout>
